[aliases]
test=pytest

[metadata]
name = audiokit
version = 0.0.1
description = Design and analyze speech, acoustic, and audio processing systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wxqwinner/audiokit
author = wxqwinner
author_email = wxqwinner@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = audiokit
install_requires =
    identify[license]>=1.3.0
    pydub>=0.23.1
    numpy>=1.19.5
python_requires = >=3.6.1
setup_requires=pytest-runner
tests_require=pytest

[options.entry_points]
console_scripts =
    audiokit=main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
